test/invalid/InvalidReturnSuperType/SubTypeA.plume

/**
 * 
 * @author 37029, Juliana Franco
 *
class SubTypeA extends SuperType is

